# Self-Driving-RC-Car

./: .gitignore  CMakeLists.txt  README.md  car_properties.conf  simulation.conf
docs/: SignDetection.md
res/: cascade_crossing_left.xml  cascade_crossing_right.xml  cascade_left_sign.xml  cascade_park_sign.xml  cascade_right_sign.xml  cascade_vorfahrt_sign.xml
scripts/: full_simulation.sh  kill_car_processes.sh  model.tflite  occar.sh  occar_obstacle_only.sh  occar_signs_only.sh  renew_software.sh  restart.sh  simulation.sh  video_input.sh
src/camera/: CMakeLists.txt  main.cpp  ocCamera.h
src/can_gateway/: CMakeLists.txt  main.cpp  ocCanGateway.cpp  ocCanGateway.h
src/command_line/: CMakeLists.txt  main.cpp
src/common/: ocAlarm.cpp  ocAlarm.h  ocArgumentParser.cpp  ocArgumentParser.h  ocArray.h  ocArrayIterator.h  ocArrayView.h  ocAssert.cpp  ocAssert.h  ocBuffer.cpp  ocBuffer.h  ocBufferReader.cpp  ocBufferReader.h  ocBufferWriter.cpp  ocBufferWriter.h  ocCanFrame.h  ocCar.cpp  ocCar.h  ocCarConfig.cpp  ocCarConfig.h  ocCommon.cpp  ocCommon.h  ocConfigFileReader.cpp  ocConfigFileReader.h  ocConst.h  ocFileWatcher.cpp  ocFileWatcher.h  ocGeometry.cpp  ocGeometry.h  ocHistoryBuffer.h  ocImageOps.cpp  ocImageOps.h  ocIpcSocket.cpp  ocIpcSocket.h  ocLogger.cpp  ocLogger.h  ocMat.h  ocMember.cpp  ocMember.h  ocPacket.h  (+18 more)
src/common/tests/: ocArgumentParser_test.cpp  ocArray_test.cpp  ocCommon_test.cpp  ocMat_test.cpp  ocPose_test.cpp  ocVec_test.cpp
src/decider/: CMakeLists.txt  Drive.cpp  Drive.h  Driver.cpp  Driver.h  Statemachine.cpp  Statemachine.h  main.cpp
src/decider/States/: Approaching_Crossing.cpp  Approaching_Crossing.h  Crossing_3_Way_Left.cpp  Crossing_3_Way_Left.h  Crossing_3_Way_Right.cpp  Crossing_3_Way_Right.h  Crossing_3_Way_T.cpp  Crossing_3_Way_T.h  Crossing_4_Way.cpp  Crossing_4_Way.h  Is_At_Crossing.cpp  Is_At_Crossing.h  Normal_Drive.cpp  Normal_Drive.h  Obstacle_State.cpp  Obstacle_State.h  Parking.cpp  Parking.h  State.h  Statemachine.cpp  Statemachine.h
src/eth_gateway/: CMakeLists.txt  main.cpp  ocBroadcastServer.cpp  ocBroadcastServer.h  ocConstGateway.h  ocDebuggerServer.cpp  ocDebuggerServer.h
src/image_processing_bev/: CMakeLists.txt  main.cpp
src/intersection_detection/: CMakeLists.txt  Histogram.cpp  Histogram.h  IntersectionClassification.cpp  IntersectionClassification.h  IntersectionConstants.h  main.cpp
src/ipc_hub/: CMakeLists.txt  ipc_hub.cpp  ipc_hub.h  main.cpp  ocCanary.h
src/lane_detection/: CMakeLists.txt  circle.cpp  helper.cpp  lane_detection.cpp  main.cpp  own_pid.cpp  squareApproach.cpp
src/liboccar/: CMakeLists.txt
src/obstacle_detection/: CMakeLists.txt  main.cpp
src/simple_drive/: CMakeLists.txt  main.cpp
src/tachometer/: CMakeLists.txt  main.cpp
src/traffic_sign_detection/: CMakeLists.txt  HaarIntersectionDetector.cpp  HaarIntersectionDetector.h  HaarSignDetector.cpp  HaarSignDetector.h  SignDetector.cpp  SignDetector.h  TrafficSign.h  main.cpp
src/video_input/: CMakeLists.txt  main.cpp
src/video_recorder/: CMakeLists.txt  main.cpp
src/video_viewer/: CMakeLists.txt  main.cpp
src/virtual_car/: CMakeLists.txt  config.h  main.cpp  ocCpuRenderer.h  ocOclRenderer.h  ocOdeSolver.cpp  ocOdeSolver.h  ocOverviewMap.h  ocRenderCamera.h  ocSimCar.cpp  ocSimCar.h  ocSimulationWorld.cpp  ocSimulationWorld.h  ocTrackStore.cpp  ocTrackStore.h  raytracer.cl
src/virtual_car/detections/: crosswalk_detection.h  detection.h  lane_detection.h  obstacle_detection.h  parking_space_detection.h  pedestrian_detection.h  road_marking_detection.h  sign_detection.h  stop_line_detection.h
